Adding change view button.

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                       <div class="input-group-btn">
                         <button id="Search" type="submit" class="btn btn-info" onclick="getSearchResults()"> Search </button>
                       </div>
+                        &nbsp;&nbsp;&nbsp;<button id="viewButton" class="btn btn-danger" onclick="changeView()" style="display: none;">Original</button>
                     </div>
                 </form>
             </div>
