Adding profile buttons.

--- a/index.html
+++ b/index.html
@@ -25,9 +25,16 @@
                 </form>
             </div>
         </div>
+        <span style="display: inline-block; margin: 10px; animation: fadeIn 4s;">
+            <h4 style="color:#ccc; font-family: 'Open Sans'; display: inline-block;">Select profile:</h4>
+            <button id="viewButton" class="btn btn-success" style="margin-top: 0px">History</button>
+            <button id="viewButton" class="btn btn-danger" style="margin-top: 0px">Musician</button>
+            <button id="viewButton" class="btn btn-danger" style="margin-top: 0px">Student</button>
+            <button id="viewButton" class="btn btn-danger" style="margin-top: 0px">Dancer</button>
+        </span>
     </div>
     <div id="display">
-        <h4 style="color:#ccc;animation: fadeIn 4s; text-align: center; margin: 10px; font-family: 'Open Sans';">Search for a term in the search bar above</h4>
+        <!-- <h4 style="color:#ccc;animation: fadeIn 4s; text-align: center; margin: 10px; font-family: 'Open Sans';">Search for a term in the search bar above</h4> -->
     </div>
     <script type="text/javascript" src="res/main.js"></script>
 </body>
