--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
         </div>
         <span style="display: inline-block; margin: 10px; animation: fadeIn 4s;">
             <h4 style="color:#ccc; font-family: 'Open Sans'; display: inline-block;">Select profile:</h4>
-            <button id="viewButton" class="btn btn-success" style="margin-top: 0px">History</button>
-            <button id="viewButton" class="btn btn-danger" style="margin-top: 0px">Musician</button>
-            <button id="viewButton" class="btn btn-danger" style="margin-top: 0px">Student</button>
-            <button id="viewButton" class="btn btn-danger" style="margin-top: 0px">Dancer</button>
+            <button id="viewButton1" class="btn btn-success" style="margin-top: 0px" onclick="viewBtnClick(1)">History</button>
+            <button id="viewButton2" class="btn btn-danger" style="margin-top: 0px" onclick="viewBtnClick(2)">Musician</button>
+            <button id="viewButton3" class="btn btn-danger" style="margin-top: 0px" onclick="viewBtnClick(3)">Student</button>
+            <button id="viewButton4" class="btn btn-danger" style="margin-top: 0px" onclick="viewBtnClick(4)">Dancer</button>
         </span>
     </div>
     <div id="display">
